.k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3sglaucushello-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: hello.k3s.glaucus.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3sglaucushello-service
                port:
                  number: 80
